// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PipelineMap > snapshots > active sprint — execute phase running 1`] = `
"  Next: Continue Work (3 tasks left)

  ■  1. Refine     2 tickets approved
  │
  ■  2. Plan       5 tasks generated
  │
  ◆  3. Execute    2/5 done · 1 running
  │
  ◇  4. Close      pending"
`;

exports[`PipelineMap > snapshots > all-done — close phase next 1`] = `
"  Next: Close Sprint

  ■  1. Refine     2 tickets approved
  │
  ■  2. Plan       5 tasks generated
  │
  ■  3. Execute    all 5 tasks done
  │
  ◆  4. Close      all tasks done"
`;

exports[`PipelineMap > snapshots > draft sprint — refine active 1`] = `
"  Next: Start Sprint

  ■  1. Refine     2 tickets approved
  │
  ■  2. Plan       5 tasks generated
  │
  ◆  3. Execute    0/5 done
  │
  ◇  4. Close      pending"
`;
